# SnapModel

./: .gitignore  README.md  pyproject.toml
SnapModel/: EnergyModel.py  SnapModel.py  SnapModelThermal.py  SnapModel_1D.py  Utilities.py  readme.txt
Tests/: run_all_tests.py  test_SnapModel.py
Tests/test_data/: molecule.in  substrate.in
snapmodel/: snapmodel.py  snapmodel_thermal.py
snapmodel/utilities/: debug_plots.py  utilities.py
