[tool.poetry]
name = "snapmodel"
version = "0.1.0"
description = "A probe particle model that allows simulating LFM experiments."
authors = ["Lukas Hoermann <lukas.hoermann@warwick.ac.uk>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sphinx-pyproject]
project = "snapmodel"
author = "Lukas Hoermann"
copyright = "2024, Lukas Hoermann"
html_theme = "furo"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "sphinx.ext.napoleon",
  "myst_parser",
]
templates_path = ["_templates"]
html_static_path = ["_static"]
exclude_patterns = ["build", ".DS_Store"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["E741"]

[tool.pyright]
include = ["snapmodel"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
pythonpath = "snapmodel"
# testpaths = ["tests"]
# addopts = [
#     "--import-mode=importlib",
# ]

